import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id("org.beryx.runtime") version "2.0.0"
}


repositories {
    mavenCentral()
    maven { url "https://repo1.maven.org/maven2/" }
    maven { url "https://jitpack.io" }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'


    implementation 'org.apache.poi:poi:5.4.1'
    implementation 'org.apache.poi:poi-ooxml:5.4.1'


    implementation 'org.apache.commons:commons-lang3:3.18.0'

    implementation 'ch.qos.logback:logback-core:1.5.19'
    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
    implementation 'org.apache.logging.log4j:log4j-api:2.24.2'
    implementation 'org.xerial:sqlite-jdbc:3.46.1.0'
}

application {
    mainClass.set('matibbajava.Main')
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

javafx {
    version = '24.0.1'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}


tasks.named('shadowJar') {
    archiveBaseName.set('GCB')
//    archiveVersion.set('1.0')
    archiveClassifier.set('') // toglie il suffisso "-all"
}

tasks.named('test') {
    useJUnitPlatform()
}